# project-template

./: .env  .gitignore  README.md  pyproject.toml  setup.sh
configs/: config.yaml
configs/dataset/: default.yaml
configs/experiment/: default.yaml
configs/logging/: default.yaml
configs/model/: default.yaml
templates/: gitignore
templates/experiment/: run_exp.py
templates/log_utils/: log_utils.py
