[project]
name = "uiw"
version = "0.1.0"
description = ""
authors = [{ name = "asd", email = "sad@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
# Minimal placeholder for dependencies
dependencies = []

# Telling Poetry how to find our package code
packages = [{ include = "uiw", from = "src" }]

[build-system]
requires = ["poetry-core>=1.5.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.4"
black = "^25.1.0"
isort = "^6.0.1"

